1631908085 | 64 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_korean.txt,  M content/vrmonitor/translations/vrmonitor_errors_koreana.txt,  M content/vrmonitor/translations/vrmonitor_errors_norwegian.txt,  M content/vrmonitor/translations/vrmonitor_errors_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_errors_romanian.txt,  M content/vrmonitor/translations/vrmonitor_errors_russian.txt,  M content/vrmonitor/translations/vrmonitor_errors_schinese.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translations/vrmonitor_finnis
https://steamdb.info/patchnotes/7379823/

--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -47,7 +47,7 @@
 "DismissableWarning_DismissButton" "Descartar"
 "DismissableWarning_RunTutorialAgain" "Iniciar tutorial (0x0001)"
 "DismissableWarning_BasestationsTooFarApart" "Estações-base muito afastadas (0x0002)"
-"DismissableWarning_OpticalBasestationSyncWarning" "Alerta de estações-base (0x0004)"
+"DismissableWarning_OpticalBasestationSyncWarning" "Alerta de estação-base (0x0004)"
 "DismissableWarning_BasestationSingleBaseModeHint" "Aviso de estação-base (0x0008)"
 "DismissableWarning_WarningsForTheFirstTime" "Alertas pela primeira vez (0x0010)"
 "DismissableWarning_MissedFrames" "Quadros perdidos (0x0020)"
@@ -62,7 +62,7 @@
 "DismissableWarning_WindowsAeroDisabled" "Alerta da tela (0x4000)"
 "DismissableWarning_Windows8" "Windows 8 (0x8000)"
 "DismissableWarning_DisplayInExtendedMode" "Alerta da tela (0x10000)"
-"DismissableWarning_BasestationsSyncOnBeamChannelConflict" "Conflito de estações-base (0x400000)"
+"DismissableWarning_BasestationsSyncOnBeamChannelConflict" "Conflito de estação-base (0x400000)"
 "DismissableWarning_SteamVRInSafeMode" "SteamVR em modo de segurança (0x1000000)"
 
 "DismissableWarning_Detected" "Detectado"
@@ -137,7 +137,7 @@
 "SteamVRSystemState_PseudoState_Welcome" "Bem-vindo(a)"
 
 "SteamVRSystemState_Ready_Application" "%1"
-"SteamVRSystemState_Connecting_Application_Lighthouse" "Confirme que o headset consegue ver as estações-base"
+"SteamVRSystemState_Connecting_Application_Lighthouse" "Confirme que o headset consegue ver as "
 "SteamVRSystemState_Connecting_Application_InsideOutCamera" "Confirme que o headset consegue ver a área de jogo"
 "SteamVRSystemState_Connecting_Application_OutsideInCamera" "Confirme que as câmeras de rastreamento conseguem ver o headset"
 "SteamVRSystemState_Standby_Application" "Coloque o headset para despertar a RV"
@@ -146,9 +146,9 @@
 "MenuAction_StatusBar" "Situação"
 "MenuAction_RoomOverview" "Visão geral do cômodo"
 "MenuAction_Settings" "Configurações"
-"MenuAction_LegacySettings" "Configurações para desenvolvedores"
+"MenuAction_LegacySettings" "Configurações de desenvolvedor"
 "MenuAction_BluetoothSettings" "Definições de Bluetooth"
-"MenuAction_BaseStationSettings" "Definições de estações-base"
+"MenuAction_BaseStationSettings" "Definições de estação-base"
 "MenuAction_DiagnosticsMenu" "Diagnóstico"
 "MenuAction_MainPlaylistMenu" "Listas de reprodução"
 "MenuAction_PlaylistEditor" "Editor de lista"
@@ -214,7 +214,7 @@
 "MenuAction_Workshop_ViewWiki" "Wiki dos Ambientes SteamVR"
 "MenuAction_Workshop_Browse" "Navegar pela Oficina"
 "MenuAction_ModelDirectory_Browse" "Acessar diretório de modelos"
-"MenuAction_WakeupAllBaseStations" "Despertar estações-base"
+"MenuAction_WakeupAllBaseStations" "Despertar estação-base"
 "MenuAction_KnockKnock" "Toc toc"
 "MenuAction_PairTracker" "Parear rastreador"
 "MenuAction_PowerOffTracker" "Desligar rastreador"
@@ -244,8 +244,8 @@
 "MonitorController_ResetCompleteSetup_Text" "Isso restaurará a instalação do SteamVR às configurações de fábrica e reiniciará o aplicativo."
 "Settings_Title" "Configurações do SteamVR"
 "Settings_Bluetooth_Title" "Definições de Bluetooth"
-"Settings_BaseStations_Title" "Definições de estações-base"
-"Settings_Developer_Title" "Configurações para desenvolvedores"
+"Settings_BaseStations_Title" "Definições de estação-base"
+"Settings_Developer_Title" "Configurações de desenvolvedor"
 "Settings_Checks" "Verificações"
 "Settings_Notifications" "Notificações"
 "Settings_Applications" "Aplicativo"
@@ -333,7 +333,7 @@
 "Settings_DefaultScreenshotType_StereoPanorama" "Panorama estereoscópico"
 
 "Settings_UseBluetoothLink_Text" "Ativar Bluetooth"
-"Settings_UseBluetoothLink_Info" "Gerencie a energia de estações-base sem fio e atualize dispositivos por meio de Bluetooth. Esta opção também pode ativar recursos adicionais em alguns headsets de RV."
+"Settings_UseBluetoothLink_Info" "Gerencie a energia de estação-base sem fio e atualize dispositivos por meio de Bluetooth. Esta opção também pode ativar recursos adicionais em alguns headsets de RV."
 
 "Settings_Bluetooth_ServicesNotAvailable" "Bluetooth indisponível"
 "Settings_Bluetooth_Driver_Install" "Instalar driver Bluetooth"
@@ -346,11 +346,11 @@
 "Settings_BaseStation_BluetoothRequired" "Ative o Bluetooth para acessar recursos sem fio da estação-base, como gerenciamento de energia e atualizações."
 "Settings_BaseStation_OpenSettingsBluetooth" "Ver configurações de Bluetooth"
 "Settings_BaseStation_PowerManagement" "Gerenciamento de energia"
-"Settings_BaseStation_PowerManagement_Explanation" "Faz com que as estações-base despertem ou entrem em modo de repouso de acordo com o uso do SteamVR."
-"Settings_BaseStation_ScanForBaseStations" "Buscar estações-base"
+"Settings_BaseStation_PowerManagement_Explanation" "Faz com que as estação-base despertem ou entrem em modo de repouso de acordo com o uso do SteamVR."
+"Settings_BaseStation_ScanForBaseStations" "Buscar estação-base"
 "Settings_BaseStation_ScanForBaseStations_Explanation" "Busca estações-base conhecidas que estão divulgando a sua presença por Bluetooth."
 "Settings_BaseStation_ConfigureBaseStations" "Configurar canais das estações-base"
-"Settings_BaseStation_ConfigureBaseStations_Explanation" "Busca estações-base e configura os seus canais para evitar conflitos."
+"Settings_BaseStation_ConfigureBaseStations_Explanation" "Busca estação-base e configura os seus canais para evitar conflitos."
 "Settings_BaseStation_BaseStation10" "Estação-base 1.0"
 "Settings_BaseStation_BaseStation20" "Estação-base 2.0"
 "Settings_BaseStation_ContinueBaseStationUpdate" "Recuperação de atualização incompleta"
@@ -743,7 +743,7 @@
 
 "FirmwareWizard_UpdateBasestation_Start_Title" "Atualizar estação-base"
 "FirmwareWizard_UpdateBasestation_Start_UpperText" " "
-"FirmwareWizard_UpdateBasestation_Start_MiddleText" "1. Desmonte e desconecte a estação-base.\n\n2. Use um cabo micro USB, como o usado para carregar os seus controles, para conectar a estação-base a uma porta USB do seu computador.\n\n3. Conecte o cabo de força à estação-base enquanto segura o botão \"Channel\" na parte traseira."
+"FirmwareWizard_UpdateBasestation_Start_MiddleText" "1. Desmonte e desconecte a estação-base.\n\n2. Use um cabo micro USB, como o usado para carregar os seus controles, para conectar a estação-base uma porta USB do seu computador.\n\n3. Conecte o cabo de força à  enquanto segura o botão \"Channel\" na parte traseira."
 "FirmwareWizard_UpdateBasestation_Start_LowerText" "4. A atualização será iniciada automaticamente assim que a estação-base for detectada. Solte o botão \"Channel\" quando isso ocorrer."
 
 "FirmwareWizard_UpdateBasestation_Choice_Title" "Atualizar firmware da estação-base"
@@ -756,11 +756,11 @@
 "FirmwareWizard_UpdateBasestation_Progress_Title" "Atualizar estação-base"
 "FirmwareWizard_UpdateBasestation_Progress_UpperText" " "
 "FirmwareWizard_UpdateBasestation_Progress_MiddleText" "Atualizando estação-base. Isso pode levar alguns minutos..."
-"FirmwareWizard_UpdateBasestation_Progress_LowerText" "AVISO: Não desconecte a estação-base, conecte outros dispositivos ou efetue outras alterações no sistema durante a atualização do dispositivo. Fazê-lo poderá resultar na inutilização da estação-base."
+"FirmwareWizard_UpdateBasestation_Progress_LowerText" "AVISO: não desconecte a estação-base, conecte outros dispositivos ou efetue outras alterações no sistema durante a atualização do dispositivo. Fazê-lo poderá resultar na inutilização da estação-base."
 
 "FirmwareWizard_UpdateBasestation_WirelessProgress_Title" "Atualizar firmware da estação-base"
 "FirmwareWizard_UpdateBasestation_WirelessProgress_MiddleText" "Atualizando firmware da estação-base. Isso pode levar alguns minutos..."
-"FirmwareWizard_UpdateBasestation_WirelessProgress_LowerText" "AVISO: Não desconecte a estação-base, conecte outros dispositivos ou efetue outras alterações no sistema durante a atualização do firmware. Fazê-lo poderá resultar na inutilização da estação-base."
+"FirmwareWizard_UpdateBasestation_WirelessProgress_LowerText" "AVISO: não desconecte a estação-base, conecte outros dispositivos ou efetue outras alterações no sistema durante a atualização do firmware. Fazê-lo poderá resultar na inutilização da estação-base."
 
 "FirmwareWizard_UpdateBasestation_Fail_Title" "Falha ao atualizar estação-base"
 "FirmwareWizard_UpdateBasestation_Fail_UpperText" "Falha na atualização deste dispositivo."
@@ -775,7 +775,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout" "Para continuar com a atualização, reinicie o SteamVR para ligar e desligar a estação-base e permitir a sua detecção óptica. Desconecte e reconecte o cabo de força da estação-base."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected" "A estação-base rejeitou a atualização por já ter uma versão mais nova. Desconecte e reconecte o cabo de força da estação-base."
 "FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected" "Uma conexão USB inesperada está impedindo a atualização sem fio da estação-base.<br><br><font color=#aaaa00>Desconecte o cabo USB que está conectado à estação-base.</font>"
-"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU" "Uma conexão USB inesperada está impedindo que a atualização sem fio da estação-base seja finalizada.<ul><li><font color=#aaaa00>Desconecte o cabo de energia da estação-base.<li>Desconecte o cabo USB que está conectado à estação-base.<li>Reconecte apenas o cabo de energia da estação-base.<li>Espere 30 segundos para que a estação-base finalize a atualização interna.</font></ul><br>O LED da estação-base pode ficar desligado durante a atualização interna.<br>Não desconecte ou conecte outros cabos à estação-base durante a atualização."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU" "Uma conexão USB inesperada está impedindo que a atualização sem fio da seja finalizada.<ul><li><font color=#aaaa00>Desconecte o cabo de energia da estação-base.<li>Desconecte o cabo USB que está conectado à estação-base.<li>Reconecte apenas o cabo de energia da estação-base.<li>Espere 30 segundos para que a finalize a atualização interna.</font></ul><br>O LED da estação-base pode ficar desligado durante a atualização interna.<br>Não desconecte ou conecte outros cabos à durante a atualização."
 "FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle" "Esta estação-base precisa ser reiniciada antes de continuar a atualização.<br><br><font color=#aaaa00>Desconecte e reconecte o cabo de força da estação-base antes de continuar.</font>"
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry" "Clique no botão abaixo para tentar novamente."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel" "Clique em \"Cancelar\" para reiniciar o SteamVR."
@@ -785,12 +785,12 @@
 
 "FirmwareWizard_UpdateBasestation_Success_Title" "Atualizar estação-base"
 "FirmwareWizard_UpdateBasestation_Success_UpperText" "Sucesso!"
-"FirmwareWizard_UpdateBasestation_Success_MiddleText" "Estação-base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação-base para que apareça como atualizada."
+"FirmwareWizard_UpdateBasestation_Success_MiddleText" "Estação-base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da  para que apareça como atualizada."
 "FirmwareWizard_UpdateBasestation_Success_LowerText" "Cuidado para não trocar os canais das estações-base ao colocá-las de volta no lugar."
 
 "FirmwareWizard_UpdateBasestationWireless_Success_Title" "Atualizar firmware da estação-base"
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText" "Sucesso!"
-"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10" "Estação-base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação-base para que apareça como atualizada."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10" "Estação-base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da  para que apareça como atualizada."
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20" "Estação-base atualizada com sucesso."
 "FirmwareWizard_Information_Title" "Atualização de dispositivo"
 "FirmwareWizard_WizardIsAlreadyBusy_Message" "Não foi possível iniciar a atualização: já há outra atualização em andamento."
@@ -1086,7 +1086,7 @@
 "BugReporter_ProgressSubmittingPercent" "Enviando...%1%"
 
 "ScanForBaseStations_Scanning"	"Buscando estações-base...\n\n%1 segundo(s) restante(s)."
-"ScanForBaseStation_Incomplete" "Buscando estações-base...\n\nIncompleto."
+"ScanForBaseStation_Incomplete" "Buscando estações-base ...\n\nIncompleto."
 "ScanForBaseStation_FoundStations" "Busca concluída"
 "ScanForBaseStation_NoKnownStations" "Busca concluída.\n\nHá estações-base próximas em modo de pareamento, mas nenhuma ainda foi usada para rastreamento."
 "ScanForBaseStation_NoStationsFound" "Busca concluída.\n\nNão há estações-base próximas em modo de pareamento."
@@ -1119,7 +1119,7 @@
 "BS20_ConfigureChannel_NoConflictOnChannel"					"Nenhum conflito no canal %1"
 "BS20_ConfigureChannel_ProgressScanComplete"				"Busca concluída.\n\nClique em um link de canal para alterá-lo."
 "BS20_ConfigureChannel_ProgressScanNoStationsFound"			"Busca concluída.\n\nNão há estações-base 2.0 próximas transmitindo."
-"BS20_ConfigureChannel_ProgressScanning"					"Buscando estações-base...\n\n%1 segundos restantes."
+"BS20_ConfigureChannel_ProgressScanning"					"Buscando estação-base...\n\n%1 segundos restantes."
 "BS20_ConfigureChannel_ProgressConnecting"					"\nConectando-se às estações-base...\n"
 "BS20_ConfigureChannel_ProgressWritingChannel"				"\nSalvando canal...\n"
 "BS20_ConfigureChannel_ProgressCancelling"					"\nCancelando...\n"
@@ -1132,13 +1132,13 @@
 "BS20_ConfigureChannel_ErrorLegend"							"Clique no link do canal para mais informações."
 "BS20_ConfigureChannel_CancelledConnection"					"Conexão com %1 cancelada. Clique no link do canal para tentar novamente."
 
-"BS_PowerManagement_Title"									"Gerenciamento de energia de estações-base"
+"BS_PowerManagement_Title"									"Gerenciamento de energia de estação-base"
 "BS_PowerManagement_Enable"									"Ativar gerenciamento de energia *"
 "BS_PowerManagement_Enable_Explanation"						"Estações-base com gerenciamento de energia ativado entram em repouso quando o SteamVR não estiver sendo usado e são reativadas quando o SteamVR for iniciado.\n"
 "BS_PowerManagement_Enable_Warning"							"<font color=#ffffff>* NÃO RECOMENDADO para espaços rastreados compartilhados, com mais de um usuário do SteamVR.</font>"
 "BS_PowerManagement_PartialStandby"							"Repouso" 
-"BS_PowerManagement_PartialStandby_Explanation"				"As estações-base desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
-"BS_PowerManagement_PartialStandby_HybridExplanation"		"As estações-base 2.0 desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
+"BS_PowerManagement_PartialStandby_Explanation"				"As estações-base desligam apenas os lasers para despertarem mais rápido quando o SteamVR for iniciado."
+"BS_PowerManagement_PartialStandby_HybridExplanation"		"As estações-base 2.0 desligam apenas os lasers para despertarem mais rápido quando o SteamVR for iniciado."
 "BS_PowerManagement_FullStandby"							"Dormir"
 "BS_PowerManagement_FullStandby_Explanation"				"As estações-base desligam os lasers e motores."
 "BS_PowerManagement_RefreshLink"							"Atualizar"
@@ -1153,16 +1153,16 @@
 
 "BS20_UpdateRecovery_Title"									"Recuperar atualização da estação-base 2.0"
 "BS20_UpdateRecovery_BluetoothRequired"						"A recuperação de atualização requer Bluetooth.\n\nAtive a comunicação Bluetooth nas configurações."
-"BS20_UpdateRecovery_Scanning"								"Buscando estações-base...\n\n%1 segundo(s) restante(s)."
-"BS20_UpdateRecovery_Incomplete"							"Buscando estações-base...\n\nIncompleto."
+"BS20_UpdateRecovery_Scanning"								"Buscando estação-base...\n\n%1 segundo(s) restante(s)."
+"BS20_UpdateRecovery_Incomplete"							"Buscando estação-base...\n\nIncompleto."
 "BS20_UpdateRecovery_FoundStations"							"Busca concluída.<br><br><font color=#ffffff>As estações-base abaixo não foram completamente atualizadas.<br><br>Selecione uma estação-base e clique em \"Restaurar dispositivo\" para continuar.</font>"
 "BS20_UpdateRecovery_NoStationsFound"						"Busca concluída.\n\nNão há estações-base próximas que precisem de recuperação."
 "BS20_UpdateRecovery_Refresh"								"Buscar novamente"
 "BS20_UpdateRecovery_UpdateDevice"							"Restaurar dispositivo"
 
 "BS_PromotePowerManagement_Title"							"SteamVR"
-"BS_PromotePowerManagement_Explanation"						"O SteamVR pode gerenciar a energia das suas estações-base.<br><br>Estações-base gerenciadas entrarão em repouso quando o SteamVR não estiver sendo usado e serão despertadas quando o SteamVR for iniciado.<br>"
-"BS_PromotePowerManagement_Enable"							"Ativar gerenciamento de energia de estações-base *"
+"BS_PromotePowerManagement_Explanation"						"O SteamVR pode gerenciar a energia das suas .<br><br>Estações-base gerenciadas entrarão em repouso quando o SteamVR não estiver sendo usado e serão despertadas quando o SteamVR for iniciado.<br>"
+"BS_PromotePowerManagement_Enable"							"Ativar gerenciamento de energia de estação-base*"
 "BS_PromotePowerManagement_Explanation2"					"<br><font color=#ffffff>* NÃO RECOMENDADO para espaços rastreados compartilhados, com mais de um usuário do SteamVR.</font>"
 "BS_PromotePowerManagement_ExitNow"							"Sair agora (%1)"
 
