--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -203,8 +203,8 @@
 "MenuAction_UpdateFirmware" "Обновяване на устройство"
 "MenuAction_ForceFirmware" "Принудително обновяване на фърмуера"
 "MenuAction_DirectMode" "Режим за директно изобразяване"
-"MenuAction_EnableDirectMode" "Включване на режима за директно изобразяване"
-"MenuAction_DisableDirectMode" "Преустановяване на режима за директно изобразяване"
+"MenuAction_EnableDirectMode" "Включване на директно изобразяване"
+"MenuAction_DisableDirectMode" "Изключване на директно изобразяване"
 "MenuAction_PairController" "Сдвояване на контролер"
 "MenuAction_PowerOffController" "Изкл. на контролера"
 "MenuAction_IdentifyBaseStation" "Идентифициране на базова станция"
