--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -202,8 +202,8 @@
 "MenuAction_UpdateFirmware" "Aggiorna dispositivo"
 "MenuAction_ForceFirmware" "Forza firmware"
 "MenuAction_DirectMode" "Modalità di visualizzazione diretta"
-"MenuAction_EnableDirectMode" "Abilita la modalità di visualizzazione diretta"
-"MenuAction_DisableDirectMode" "Disabilita la modalità di visualizzazione diretta"
+"MenuAction_EnableDirectMode" "Modalità diretta: sì"
+"MenuAction_DisableDirectMode" "Modalità diretta: no"
 "MenuAction_PairController" "Associa controller"
 "MenuAction_PowerOffController" "Spegni controller"
 "MenuAction_IdentifyBaseStation" "Identifica stazione di base"
@@ -287,7 +287,7 @@
 "Settings_MediumSpace" "Spazio medio"
 "Settings_LargeSpace" "Spazio grande"
 "Settings_GiganticSpace" "Spazio gigantesco"
-"Settings_RemoveAllUSBDevices" "Rimuovi tutti i dispositivi USB SteamVR"
+"Settings_RemoveAllUSBDevices" "Rimuovi i dispositivi USB SteamVR"
 "Settings_ResetChaperoneToDK2Default" "Reimposta i dati chaperone sulle impostazioni predefinite Oculus Rift DK2"
 
 "Settings_Information_Title" "SteamVR"
@@ -504,7 +504,7 @@
 "Explanation_QuickCalibrate" "Ripristina rapidamente la configurazione della stanza. Per le impostazioni in piedi e realtà virtuale a intera stanza, i nuovi bordi saranno centrati sul visore posizionato a terra al centro dell'area di gioco."
 "MenuAction_ResetRuntimeAndQuit" "Reimposta percorso SteamVR"
 "Explanation_ResetRuntimeAndQuit" "Reimposta il percorso SteamVR in base alla cartella SteamVR da cui è avviato."
-"MenuAction_RemoveAllSteamVRUSBDevices" "Rimuovi tutti i dispositivi USB SteamVR"
+"MenuAction_RemoveAllSteamVRUSBDevices" "Rimuovi i dispositivi USB SteamVR"
 "Explanation_RemoveAllSteamVRUSBDevices" "Per reinstallare i driver, rimuovi dal sistema tutti i dispositivi UBS collegati a SteamVR."
 "MenuAction_DisableEnhancedPowerManagement" "Disabilita risparmio energetico"
 "Explanation_DisableEnhancedPowerManagement" "Se osservi strane perdite di tracciamento o non riesci ad associare i controller wireless, disabilita il risparmio energetico avanzato di Windows per i dispositivi USB di SteamVR. "
