--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -202,8 +202,8 @@
 "MenuAction_UpdateFirmware" "Zaktualizuj urządzenie"
 "MenuAction_ForceFirmware" "Wymuś firmware"
 "MenuAction_DirectMode" "Wyświetlanie w trybie Direct Mode"
-"MenuAction_EnableDirectMode" "Włącz wyświetlanie w trybie Direct Mode"
-"MenuAction_DisableDirectMode" "Wyłącz wyświetlanie w trybie Direct Mode"
+"MenuAction_EnableDirectMode" "Włącz tryb Direct Mode"
+"MenuAction_DisableDirectMode" "Wyłącz tryb Direct Mode"
 "MenuAction_PairController" "Sparuj kontroler"
 "MenuAction_PowerOffController" "Wyłącz kontroler"
 "MenuAction_IdentifyBaseStation" "Zidentyfikuj stację bazową"
@@ -352,7 +352,7 @@
 "Settings_BaseStation_PowerManagement_Explanation" "Wybudzaj i ustawiaj stacje bazowe w trybie czuwania w zależności od twojego użycia SteamVR."
 "Settings_BaseStation_ScanForBaseStations" "Skanuj w poszukiwaniu stacji bazowych"
 "Settings_BaseStation_ScanForBaseStations_Explanation" "Szukaj znanych stacji bazowych, które rozgłaszają swoją widoczność dla innych urządzeń poprzez Bluetooth."
-"Settings_BaseStation_ConfigureBaseStations" "Skonfiguruj kanały stacji bazowej"
+"Settings_BaseStation_ConfigureBaseStations" "Skonfiguruj kanały stacji bazowych"
 "Settings_BaseStation_ConfigureBaseStations_Explanation" "Szukaj stacji bazowych i skonfiguruj ich kanały, by uniknąć konfliktów."
 "Settings_BaseStation_BaseStation10" "Stacja bazowa 1.0"
 "Settings_BaseStation_BaseStation20" "Stacja bazowa 2.0"
@@ -438,8 +438,8 @@
 
 "Settings_Audio_Device_HMD"  "Gogle VR"
 "Settings_Audio_Device_Other"  "Inne"
-"Settings_Audio_AudioPlay"  "Urządzenie wejściowe dźwięku"
-"Settings_Audio_AudioRecord"  "Urządzenie wyjściowe dźwięku"
+"Settings_Audio_AudioPlay"  "Urządzenie wyjściowe audio"
+"Settings_Audio_AudioRecord"  "Urządzenie wejściowe audio"
 "Settings_Audio_HDMIGain"  "Włącz redukcję wzmocnienia sygnału wyjściowego VIVE HDMI Audio"
 "Settings_Audio_Default"  "Domyślne"
 "Settings_Audio_AudioMirrorPlay"  "Duplikuj dźwięk do urządzenia:"
@@ -505,7 +505,7 @@
 "Explanation_QuickCalibrate" "Szybko zresetuj swoje ustawienia dotyczące przygotowanego wcześniej pokoju. Dla trybu pokoju oraz stojącego w VR nowe granice obszaru zostaną wyśrodkowane na twoich goglach na podłodze w samym środku twojej przestrzeni."
 "MenuAction_ResetRuntimeAndQuit" "Zresetuj ścieżkę SteamVR"
 "Explanation_ResetRuntimeAndQuit" "Resetuje twoją ścieżkę SteamVR opartą o katalog, z którego jest uruchamiany SteamVR."
-"MenuAction_RemoveAllSteamVRUSBDevices" "Usuń wszystkie urządzenia USB SteamVR"
+"MenuAction_RemoveAllSteamVRUSBDevices" "Usuń wszystkie urz. USB SteamVR"
 "Explanation_RemoveAllSteamVRUSBDevices" "Usuń wszystkie urz. SteamVR z systemu, by przeinstalować sterowniki."
 "MenuAction_DisableEnhancedPowerManagement" "Wyłącz zarządzanie zasilaniem"
 "Explanation_DisableEnhancedPowerManagement" "Wyłącz Zaawansowane ustawienia zasilania systemu Windows dla urządzeń USB SteamVR, jeżeli doświadczasz niecodziennej utraty możliwości śledzenia lub nie możesz sparować bezprzewodowych kontrolerów."
