--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -171,7 +171,7 @@
 "MenuAction_CreateSystemReport" "Criar relatório de sistema"
 "MenuAction_ResetSeatedPosition" "Repor posição sentada"
 "MenuAction_SystemReportViewer" "Visualizador de relatórios de sistema"
-"MenuAction_DisplayFrameTiming" "Tempo das frames (Avançado)"
+"MenuAction_DisplayFrameTiming" "Tempos das frames (Avançado)"
 "MenuAction_RecordTrackingData" "Gravar dados de deteção"
 "MenuAction_StopRecording" "Parar gravação"
 "MenuAction_Crash" "Crash"
