--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -202,8 +202,8 @@
 "MenuAction_UpdateFirmware" "Обновить устройство"
 "MenuAction_ForceFirmware" "Принудительное обновление прошивки"
 "MenuAction_DirectMode" "Режим прямого отображения"
-"MenuAction_EnableDirectMode" "Включить режим прямого отображения"
-"MenuAction_DisableDirectMode" "Выключить режим прямого отображения"
+"MenuAction_EnableDirectMode" "Включить прямое отображение"
+"MenuAction_DisableDirectMode" "Выключить прямое отображение"
 "MenuAction_PairController" "Привязать контроллер"
 "MenuAction_PowerOffController" "Выключить контроллер"
 "MenuAction_IdentifyBaseStation" "Распознать базовую станцию"
@@ -287,7 +287,7 @@
 "Settings_MediumSpace" "Среднее пространство"
 "Settings_LargeSpace" "Большое пространство"
 "Settings_GiganticSpace" "Гигантское пространство"
-"Settings_RemoveAllUSBDevices" "Удалить все USB-устройства SteamVR"
+"Settings_RemoveAllUSBDevices" "Удалить USB-устройства SteamVR"
 "Settings_ResetChaperoneToDK2Default" "Вернуть данные пространственной сетки к данным для Oculus Rift DK2 по умолчанию"
 
 "Settings_Information_Title" "SteamVR"
@@ -379,7 +379,7 @@
 "Settings_Developer_General_Header" "Разработчик"
 "Settings_Advanced_Status_Header" "Проверка состояния"
 "Settings_Advanced_RoomAndTracking_Header" "Комната и отслеживание"
-"Settings_Advanced_Reset_Header" "Сбросить"
+"Settings_Advanced_Reset_Header" "Сброс"
 "Settings_Advanced_Paths_Header" "Расположения"
 "Settings_Advanced_DirectMode_Header" "Режим прямого отображения"
 "Settings_Advanced_MotionSmoothing_Header" "Сглаживание движений"
@@ -501,7 +501,7 @@
 "Explanation_QuickCalibrate" "Быстрый сброс настроек комнаты. Для виртуальной реальности в положении стоя и в пределах комнаты будут заданы новые границы. Середина пространства будет находиться в местоположении вашего шлема."
 "MenuAction_ResetRuntimeAndQuit" "Сбросить путь к SteamVR"
 "Explanation_ResetRuntimeAndQuit" "Изменить путь к SteamVR в соответствии с папкой, из которой запущен SteamVR."
-"MenuAction_RemoveAllSteamVRUSBDevices" "Удалить все USB-устройства SteamVR"
+"MenuAction_RemoveAllSteamVRUSBDevices" "Удалить USB-устройства SteamVR"
 "Explanation_RemoveAllSteamVRUSBDevices" "Удаляет из системы все USB-устройства, связанные со SteamVR, для повторной установки драйверов."
 "MenuAction_DisableEnhancedPowerManagement" "Отключить управление электропитанием"
 "Explanation_DisableEnhancedPowerManagement" "Отключите расширенное управление электропитанием Windows для USB-устройств SteamVR, если отслеживание отключается по непонятной причине или если вам не удаётся привязать беспроводные контроллеры. "
@@ -531,7 +531,7 @@
 "Advanced_RoomOverview" "Пространственная сетка"
 "Advanced_Compositor" "В шлеме"
 "Advanced_Paths" "Пути"
-"Advanced_Reset" "Сбросить"
+"Advanced_Reset" "Сброс"
 "Advanced_Performance" "Графика"
 "Advanced_Camera" "Камера"
 "Advanced_Bluetooth" "Bluetooth"
