--- a/content/vrmonitor/translations/vrmonitor_errors_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_russian.txt
@@ -922,7 +922,7 @@
 "Warning_DismissableWarning_WiredIndexControllerActivity_Header" "Отключите контроллеры во время игры"
 "Warning_DismissableWarning_WiredIndexControllerActivity_Description" "Вытягивание кабеля питания под углом может привести к поломке контроллера."
 "Warning_DismissableWarning_WiredIndexControllerActivity_Action" "Подробнее"
-"Warning_DismissableWarning_WiredIndexControllerActivity_ActionURL" "https://support.steampowered.com/kb_article.php?ref=7995-TPGZ-4643#wired-controller-usage"
+"Warning_DismissableWarning_WiredIndexControllerActivity_ActionURL" "https://support.steampowered.com/kb_article.php?ref=7995-TPGZ-4643&l=russian#wired-controller-usage"
 
 }
 }
